# commando

./: .gitignore  README.md  miniops
apps/misc/tools/: Makefile.am  configure.ac
apps/misc/tools/devinit/: devinit.c
apps/misc/tools/etherwake/: Makefile.am
apps/misc/tools/fbshot/: fbshot.c
apps/misc/tools/grab/: Makefile.am  main.c
apps/tuxbox/enigma/data/htdocs/: Makefile.am
apps/tuxbox/enigma/data/resources/: Makefile.am  rcdbox_inputdev.xml  rcdm5xxx.xml  rcdm7000.xml  rcdreambox_keyboard.xml
apps/tuxbox/enigma/data/templates/: Makefile.am
apps/tuxbox/plugins/: Makefile.am  acinclude.m4  configure.ac
apps/tuxbox/plugins/autobouquets/: .gitignore  Makefile.am  autobouquets.cfg  autobouquets.cpp  autoscan  start_autobouquets.c
apps/tuxbox/plugins/blockads/: .gitignore  Makefile.am  blockad.c  blockads.c  blockads.cfg  blockads.conf  blockads.h  color.h  gfx.c  gfx.h  globals.c  globals.h  http.c  http.h  io.c  io.h  lcd.c  lcd.h  lcd_font.h  readme.txt  start.c  text.c  text.h
apps/tuxbox/plugins/blockads/shellexec/: Makefile.am  plconfig_blockads.mnu  wzops
apps/tuxbox/plugins/clock/: Makefile.am  clock.c  clock.cfg  clock.conf  clock.h  color.h  gfx.c  gfx.h  init.gitignore  io.c  io.h  readme.txt  sclock  sclocks  ssaver.c  ssaver.conf  start.c  text.c  text.h
apps/tuxbox/plugins/clock/shellexec/: Makefile.am  cops  plconfig_clock.mnu  plconfig_ssaver.mnu  plrun_clock.mnu  plrun_ssaver.mnu  ssops
apps/tuxbox/plugins/dvbsub/: PacketQueue.cpp  dvbsub.cfg  dvbsub.cpp  reader_thread.cpp
apps/tuxbox/plugins/enigma/: Makefile.am
apps/tuxbox/plugins/enigma/bitrate/: Makefile.am
apps/tuxbox/plugins/enigma/getset/: getset.h
apps/tuxbox/plugins/enigma/movieplayer/: movieplayer.cpp  movieplayer.h
apps/tuxbox/plugins/enigma/rss/: rss.h
apps/tuxbox/plugins/enigma/weather/: weather.h
apps/tuxbox/plugins/fx2/: Makefile.am
apps/tuxbox/plugins/fx2/c64emu/: .gitignore  Makefile.am
apps/tuxbox/plugins/fx2/lcdcirc/: Makefile.am
apps/tuxbox/plugins/fx2/lemm/: Makefile.am
apps/tuxbox/plugins/fx2/lib/: Makefile.am  pig.c
apps/tuxbox/plugins/fx2/master/: Makefile.am
apps/tuxbox/plugins/fx2/mines/: Makefile.am
apps/tuxbox/plugins/fx2/outdoor/: Makefile.am
apps/tuxbox/plugins/fx2/pac/: Makefile.am  pacman.cfg
apps/tuxbox/plugins/fx2/satfind/: Makefile.am
apps/tuxbox/plugins/fx2/snake/: Makefile.am
apps/tuxbox/plugins/fx2/sokoban/: Makefile.am
apps/tuxbox/plugins/fx2/sol/: Makefile.am  somain.c
apps/tuxbox/plugins/fx2/solitair/: Makefile.am
apps/tuxbox/plugins/fx2/sudoku/: Makefile.am  board.cpp  board.h  colors.h  menu.cpp  menu.h  misc.cpp  misc.h  somain.cpp  sudoku.cfg  sudoku.cpp  sudoku.h
apps/tuxbox/plugins/fx2/tank/: Makefile.am
apps/tuxbox/plugins/fx2/tetris/: Makefile.am
apps/tuxbox/plugins/fx2/vierg/: Makefile.am  vierg.cfg
apps/tuxbox/plugins/fx2/yahtzee/: Makefile.am
apps/tuxbox/plugins/getepg/: Makefile.am  getepg-now  getepg.cfg  start_getepg.c  weekepglog
apps/tuxbox/plugins/include/: plugin.h
apps/tuxbox/plugins/links/: Makefile.am  links.cfg  links.sh  start.c
apps/tuxbox/plugins/logomask/: Makefile.am  color.h  gfx.c  gfx.h  io.c  io.h  logomask.c  logomask.cfg  logomask.conf  logomask.h  logoset.c  logoset.cfg  readme.txt  start_logomask.c  start_logoset.c  text.c  text.h
apps/tuxbox/plugins/logomask/shellexec/: Makefile.am  plconfig_logomask.mnu
apps/tuxbox/plugins/mosaic/: mosaic.cpp
apps/tuxbox/plugins/nitscan/: .gitignore  Makefile.am  cnitscan  nitscan.cfg  start_nitscan.c
apps/tuxbox/plugins/pip/: pip.cpp
apps/tuxbox/plugins/shellexec/: Makefile.am  gfx.c  gfx.h  io.c  lcd.c  lcd.h  readme.txt  shellexec.c  shellexec.cfg  shellexec.conf  shellexec.h  start.c  text.c  text.h
apps/tuxbox/plugins/sysinfo/: init.gitignore  sysinfo.c  sysinfo.cfg  sysinfo.h  text.c
apps/tuxbox/plugins/tuxcal/: tuxcal.c  tuxcal.h
apps/tuxbox/plugins/tuxcal/daemon/: tuxcald.c  tuxcald.h
apps/tuxbox/plugins/tuxclock/: tuxclock.c  tuxclock.h
apps/tuxbox/plugins/tuxclock/daemon/: tuxclockd.c  tuxclockd.h
apps/tuxbox/plugins/tuxcom/: tuxcom.c  tuxcom.cfg  tuxcom.h
apps/tuxbox/plugins/tuxmail/: tuxmail.c  tuxmail.h
apps/tuxbox/plugins/tuxmail/daemon/: Makefile.am  tuxmaild.c  tuxmaild.h
apps/tuxbox/plugins/tuxtxt/: tuxtxt.c  tuxtxt.cfg  tuxtxt.h
apps/tuxbox/plugins/tuxwetter/: Makefile.am  bmps.c  color.h  convert.list  fb_display.c  gif.c  gifdecomp.c  http.c  io.c  parser.c  parser.h  php.c  pngw.c  text.c  tuxwetter.c  tuxwetter.conf  tuxwetter.h
apps/tuxbox/plugins/tuxwetter/bitmap/: Makefile.am
apps/tuxbox/plugins/tuxwetter/shellexec/: Makefile.am  plconfig_tuxwetter.mnu  tuxwetter.mcfg  twops
apps/tuxbox/plugins/vncviewer/: fbvnc.cpp  overlay.c  rfbproto.c  vnc.cfg  vncviewer.h
apps/tuxbox/tools/: Makefile.am  configure.ac
apps/tuxbox/tools/cdkVcInfo/: cdkVcInfo.cpp
apps/tuxbox/tools/getrc/: .gitignore  Makefile.am  getrc.c  getrc.h  io.c  io.h  readme.txt
apps/tuxbox/tools/hotplug/: hotplug.c
apps/tuxbox/tools/input/: Makefile.am  color.h  gfx.c  gfx.h  input.c  input.h  inputd.c  inputd.h  io.c  io.h  readme.txt  text.c  text.h
apps/tuxbox/tools/misc/: Makefile.am  cron  rcsim.c  saa.c  wakevol
apps/tuxbox/tools/msgbox/: gfx.c  io.c  msgbox.c  msgbox.h  text.c  text.h  txtform.c
apps/tuxbox/tools/tuxinfo/: tuxinfo.c
cdk/root_dream/share/zoneinfo/: Makefile.am  NFT
cdk/root_dream/var_init/etc/: Makefile.am  TZ  autobouquets.csv  bq-list.bak  bq_0f.ref  cable_1st.boot  cables.xml  cables_locale.xml  channels.cfg  custom_epg.txt  custom_sort.new  custom_sort_1.txt  custom_sort_2.txt  custom_sort_3.txt  custom_sort_4.txt  custom_sort_5.txt  custom_swap.txt  di-list  emu_versions.txt  issue.net  issue.net-c  multisat.cat  net-exit  net-open  passwd  satellites.xml  supplement.txt  terrestrial.xml  themes_e.uk  v-level
cdk/root_dream/var_init/etc/headers/: Makefile.am  custom_epg.txt  custom_sort_1.txt  custom_sort_3.txt  custom_sort_5.txt
cdk/root_dream/var_init/etc/icons/: Makefile.am
cdk/root_dream/var_init/etc/info/: Audio-Priority.txt  Audio_Priority.txt  (+13 more)
(+922 files in other folders)
