FILES_FLASH_RO = \
	Kwajalein Midway Honolulu Anchorage Tijuana MST7MDT CST6CDT \
	Saskatchewan Bogota EST5EDT EST Atlantic Caracas Santiago \
	Newfoundland East West Danmarkshavn Noronha Azores Cape_Verde \
	Casablanca Dublin CET Kinshasa Harare Istanbul Jerusalem \
	Baghdad Riyadh Moscow Nairobi Tehran Muscat Baku Kabul Omsk \
	Tashkent Calcutta Katmandu Almaty Dhaka Colombo Rangoon \
	Bangkok Krasnoyarsk Hong_Kong Irkutsk Kuala_Lumpur Perth \
	Taipei Tokyo Seoul Yakutsk Adelaide Darwin Brisbane Sydney \
	Guam Hobart Vladivostok Magadan Auckland Fiji Tongatapu

DIR = /share/zoneinfo

include $(top_srcdir)/root/Makefile.inc
