SUBDIRS = headers network init.d

FILES_FLASH_RO = \
	emu_versions.txt group hostname hosts localtime passwd smb.conf TZ \
	cables.xml satellites.xml dictionary.uk themes_e.uk autobouquets.csv \
	bq_0f.ref bq-list bq-list.bak channels.cfg custom_epg.txt custom_sort.new \
	custom_sort_1.txt custom_sort_2.txt custom_sort_3.txt custom_sort_4.txt \
	custom_sort_5.txt custom_swap.txt supplement.txt sml.dat net-open net-exit \
	di-list issue.net multisat.cat v-level

DIR = /var_init/etc

include $(top_srcdir)/root/Makefile.inc

