
FILES_FLASH_RO = \
	Audio_Priority.txt \
	Set_my_Location.txt \
	Commando_welcome.txt \
	GetEPG.txt \
	Hints_and_Tips.txt \
	Softcams_educational.txt \
	AutoBouquets_N1.txt \
	MultiSat_Dish_Setup.txt \
	Bouquet_Editor.txt \
	Recording_to_a_hdd_mount.txt \
	cable_SML_NetID_help.txt

DIR = /var_init/etc/info/

include $(top_srcdir)/root/Makefile.inc
