SUBDIRS = enigma zapit

FILES_FLASH_RO = \
	shellexec.conf \
	menu_about.conf \
	menu_abs-xtras.conf \
	menu_autobouquet.conf \
	menu_bq-content.conf \
	menu_bq-create.conf \
	menu_bq-sort.conf \
	menu_get-epg.conf \
	menu_net.conf \
	menu_PC.conf \
	menu_SML.conf \
	menu_utilities.conf \
	menu_volume.conf

FILES_FLASH_RO_EXEC = \
	standby.on standby.off \
	picons.install picons.remove

DIR = /var_init/tuxbox/config/

include $(top_srcdir)/root/Makefile.inc
